# Pantera

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUICK_START.md  README.md  example.env
docs/: API_REFERENCE.md  ARCHITECTURE.md  BACKEND_FRONTEND_INTEGRATION_VALIDATION.md  DATA_ANALYTICS_GUIDE.md  DEVELOPMENT.md  README.md
examples/: README.md  comprehensive_tests.py  data_analytics_example.py  requirements.txt  simple_analytics_demo.py  test_kweb_fxi.py
src/: auth.rs  auth_handler.rs  auth_middleware.rs  auth_routes.rs  config.rs  database.rs  errors.rs  handlers.rs  main.rs  models.rs  validation.rs  web_ui.rs  yahoo_service.rs
templates/: analytics.html  backup.html  base.html  dashboard.html  login.html  search.html
