[package]
name = "mango-data-service"
version = "0.1.0"
edition = "2021"
description = "High-performance Yahoo Finance data service with advanced optimizations including zero-copy operations, concurrent caching, and intelligent rate limiting"
authors = ["Alex"]
license = "MIT"
repository = "https://github.com/coqui123/Pantera"
keywords = ["finance", "yahoo", "api", "data", "rust"]
categories = ["api-bindings", "web-programming::http-server"]
readme = "README.md"
homepage = "https://github.com/coqui123/Pantera"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Rate limiting
tower_governor = "0.4"
governor = "0.6"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Yahoo Finance API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Yahoo Finance API
yahoo_finance_api = "2.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Decimal
rust_decimal = { version = "1.0", features = ["serde-with-str"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Concurrent data structures and caching
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
once_cell = "1.0"

# Templating for Web UI
askama = { version = "0.12", features = ["with-axum"], optional = true }
askama_axum = { version = "0.4", optional = true }

[features]
default = []
web-ui = ["askama", "askama_axum"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "mango-data-service"
path = "src/main.rs" 
